# RMI

./: .gitignore  CMakeLists.txt  README.md  agent_123811_123852.tgz  build.sh  rmi-scripts-c123.tgz  run.sh  startC1  startC1v2  startC2  startC2AntiCrash.sh  startC3  startC3straight  startC4
GUISample/: GUISample
Labs/rmi-2425/: C1-config.xml  C1-lab.xml  C1v2-grid.xml  C1v2-lab.xml  C2-lab.xml  C3-config.xml  C3-lab.xml  C3straight-lab.xml  C4-config.xml  C4-lab.xml
Viewer/: Viewer  crmainparameters.cpp  crmainparameters.h  crqlabview.cpp  main.cpp
agent/: build.sh  challenge1.py  challenge2.py  challenge3.py  challenge4.py  maths.py  plan.map  plan.path  planning.path  run.sh  test.py  tips.txt
pClient/: challenge1.py  challenge2.py  challenge3.py  mainRob.py
robsample/: robsample
simulator/: cbrobot.cpp  cbsimulatorGUI.cpp  cbsimulatorGUI.ui  planning_score.awk  simulator  simulator.cpp
